# mini_pgw

./: .gitignore  CMakeLists.txt  ClientSettings.h  Dockerfile.client  Dockerfile.server  Makefile  README.md  ServerSettings.h  SessionManager.cpp  SessionManager.h  main.cpp
ConfigLoader/: ClientConfigLoader.cpp  ClientConfigLoader.h  IConfigLoader.h  ServerConfigLoader.cpp  ServerConfigLoader.h
SettingsStructures/: RawServerSettings.h  UdpServerSettings.h
config/: client_config.json  server_config.json
src/: CdrWriter.cpp  CdrWriter.h  HttpServer.cpp  HttpServer.h  PgwServer.cpp  PgwServer.h  SessionManager.cpp  SessionManager.h  StructSplitter.cpp  UdpClient.cpp  UdpClient.h  UdpServer.cpp  UdpServer.h  main.cpp
src/ConfigLoader/: ClientConfigLoader.cpp  ServerConfigLoader.cpp
src/SettingsStructures/: LoggerSettings.h
src/client/: CMakeLists.txt  UdpClient.cpp  UdpClient.h  main.cpp
src/common/: StructSplitter.cpp  StructSplitter.h
src/common/ConfigLoader/: ClientConfigLoader.cpp  ClientConfigLoader.h  IConfigLoader.h  ServerConfigLoader.cpp  ServerConfigLoader.h
src/common/Consts/: PathConsts.h  ResponseConsts.h
src/common/SettingsStructures/: ClientSettings.h  HttpApiServerSettings.h  LoggerSettings.h  RawServerSettings.h  SessionManagerSettings.h
src/server/: CMakeLists.txt  CdrWriter.cpp  CdrWriter.h  HttpServer.cpp  HttpServer.h  PgwServer.cpp  PgwServer.h  SessionManager.cpp  SessionManager.h  UdpServer.cpp  UdpServer.h  main.cpp
src/tests/: ConfigLoaderTest.cpp  SessionManagerTest.cpp  UdpClientTest.cpp
src/tests/mocks/: MockCdrWriter.h
tests/: ConfigLoaderTest.cpp  SessionManagerTest.cpp  UdpClientTest.cpp  UdpServerTest.cpp
tests/mocks/: MockCdrWriter.h
